Add user resolution, centralize messages
Todo: add logic for missing locales and locale keys
Todo: add logic for resolving pings in strings